# DavidAI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: project-plan.md
examples/: ai_assistant.py  generate_report.py  hello_automation.py
src/davidai/: __init__.py  config.py  runner.py
tests/: test_runner.py
